envoy/cluster.yml
static_resources:

  listeners:
  - name: listeners_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config: 
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: hello_world_service
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  method: "%REQ(:METHOD)%"
                  start_time: "%START_TIME%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  protocol: "%PROTOCOL%"
                  response_code: "%RESPONSE_CODE%"
                  response_flag: "%RESPONSE_FLAGS%"
                  duration: "%DURATION%"
                  upstream_host: "%UPSTREAM_HOST%"
                  user_agent: "%REQ(USER-AGENT)%"
                  x-request-id: "%REQ(X-REQUEST-ID)%"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: my_first_route
            virtual_hosts:
            - name: direct_response_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/ping"
                direct_response:
                  status: 200
                  body:
                    inline_string: "pong"
              - match:
                  prefix: "/hello-world"
                route:
                  cluster: cluster1
  clusters:
  - name: cluster1
    connect_timeout: 1s
    type: strict_dns
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: cluster1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 4444
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 5000
